# esp32-pmon

./: .gitignore  CMakeLists.txt  Makefile  README.md  changelog.txt  gitlab.com.full.pem  gitlab.com.pem  make.txt  package.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/ssd1306/: CMakeLists.txt
components/ssd1306/src/nano_engine/: sprite.h
components/ssd1306/src/ssd1306_hal/esp/: io.h  platform.c
components/ssd1306/src/ssd1306_hal/linux/: io.h
main/: CMakeLists.tsv  CMakeLists.txt  app.cpp  app.h  badge_config.h  btn.cpp  btn.h  cmd_ble.cpp  cmd_ble.h  cmd_deauth.cpp  cmd_deauth.h  cmd_join.cpp  cmd_join.h  cmd_monitor.cpp  cmd_monitor.h  cmd_npm.cpp  cmd_npm.h  cmd_radar.cpp  cmd_radar.h  cmd_scan.cpp  cmd_scan.h  cmd_startup.cpp  cmd_startup.h  cmd_system.cpp  cmd_system.h  cmd_targets.cpp  cmd_targets.h  cmd_tester.cpp  cmd_tester.h  cmd_version.cpp  cmd_version.h  component.mk  console.cpp  console.h  gpio.cpp  gpio.h  leds.cpp  leds.h  leds_alarm.cpp  log.h  (+18 more)
releases/2019-12-08/: flash_app_args  flash_project_args
releases/2019-12-08/bootloader/: bootloader.elf
releases/2020-01-04/: flash_ios.sh
releases/2020-01-05/: flash_linux.sh
releases/nnc/: ptable.csv  read_full.sh  read_partitions.sh  write_full.sh
